dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(ns_tclsh.cc)

V_PROG="ns"
V_LIB=""
V_SHELL=""

builtin(include, ./conf/configure.in.fns)

builtin(include, ./conf/configure.in.head)
builtin(include, ./conf/configure.in.tcl)
builtin(include, ./conf/configure.in.tk)
builtin(include, ./conf/configure.in.otcl)
builtin(include, ./conf/configure.in.TclCL)
builtin(include, ./conf/configure.in.misc)
builtin(include, ./conf/configure.in.x11)
builtin(include, ./conf/configure.in.tcldebug)
builtin(include, ./conf/configure.in.dmalloc)

#XXX
if test $ac_cv_prog_gcc = yes ; then
	V_STATIC="-static"
else
	V_STATIC="-Bstatic"
fi

AC_ARG_ENABLE(debug,   --enable-debug		build with debugging enabled, V_CCOPT="-g", V_CCOPT="-O2")

if test "$host_cpu" = alpha ; then
	AC_DEFINE(INT_64,u_long)
fi

NS_FNS_TAIL
builtin(include, ./conf/configure.in.tail)
