dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(ns_tclsh.cc)

V_PROG="ns"
V_LIB=""
V_SHELL=""

builtin(include, ./conf/configure.in.fns)

dnl default to non-static
enable_static=no

builtin(include, ./conf/configure.in.head)
builtin(include, ./conf/configure.in.tcl)
builtin(include, ./conf/configure.in.tk)
builtin(include, ./conf/configure.in.otcl)
builtin(include, ./conf/configure.in.TclCL)
builtin(include, ./conf/configure.in.misc)
builtin(include, ./conf/configure.in.x11)
builtin(include, ./conf/configure.in.tcldebug)
builtin(include, ./conf/configure.in.dmalloc)
default_classinstvar=yes
builtin(include, ./conf/configure.in.debugopts)

PERL_OPTIONAL=true
builtin(include, ./conf/configure.in.perl)
if test "x$PERL" = x
then
	AC_MSG_WARN([Perl5 not found; test scripts will not run succesfully.])
fi

AC_ARG_ENABLE(debug,   --enable-debug		build with debugging enabled, V_CCOPT="-g -Wall", V_CCOPT="-O2")

if test "$host_cpu" = alpha ; then
	AC_DEFINE(INT_64,u_long)
fi

dnl AC_CHECK_FUNCS will place -D's in @DEFS@
AC_CHECK_FUNCS(bcopy bzero getrusage sbrk snprintf strtoll strtoq)

NS_FNS_TAIL
define(AcOutputFiles,Makefile tcl/lib/ns-autoconf.tcl indep-utils/webtrace-conv/ucb/Makefile indep-utils/webtrace-conv/dec/Makefile indep-utils/webtrace-conv/nlanr/Makefile indep-utils/webtrace-conv/epa/Makefile indep-utils/cmu-scen-gen/setdest/Makefile)
builtin(include, ./conf/configure.in.tail)
