dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(ns_tclsh.cc)

AC_CONFIG_HEADER(autoconf.h)

V_PROG="ns"
V_LIB=""
V_SHELL=""

builtin(include, ./conf/configure.in.fns)

dnl default to non-static
enable_static=no

builtin(include, ./conf/configure.in.head)
builtin(include, ./conf/configure.in.tcl)
builtin(include, ./conf/configure.in.tk)
builtin(include, ./conf/configure.in.otcl)
builtin(include, ./conf/configure.in.TclCL)
builtin(include, ./conf/configure.in.misc)
builtin(include, ./conf/configure.in.x11)
builtin(include, ./conf/configure.in.tcldebug)
builtin(include, ./conf/configure.in.dmalloc)
default_classinstvar=yes
builtin(include, ./conf/configure.in.debugopts)

PERL_OPTIONAL=true
builtin(include, ./conf/configure.in.perl)
if test "x$PERL" = x
then
	AC_MSG_WARN([Perl5 not found; test scripts will not run succesfully.])
fi

AC_ARG_ENABLE(debug,   --enable-debug		build with debugging enabled, V_CCOPT="-g -Wall", V_CCOPT="-O2")

AC_HEADER_STDC

dnl AC_CHECK_FUNCS will place -D's in @DEFS@
AC_CHECK_FUNCS(bcopy bzero getrusage sbrk snprintf strtoll strtoq)
AC_CHECK_HEADERS(string.h strings.h)

dnl
dnl figure out random return type
dnl
AC_MSG_CHECKING(return type of random)
touch confdefs.h
AC_TRY_RUN([#include <stdlib.h>
long random() { return 1; }
main() { exit(0); }
],
AC_MSG_RESULT(long)
AC_DEFINE(RANDOM_RETURN_TYPE,long)
,
AC_MSG_RESULT(int)
AC_DEFINE(RANDOM_RETURN_TYPE,int)
)

dnl
dnl check some types
dnl
AC_CHECK_TYPE(int8_t,signed char)
AC_CHECK_TYPE(int16_t,short)
AC_CHECK_TYPE(int32_t,int)
AC_CHECK_TYPE(u_int8_t,unsigned char)
AC_CHECK_TYPE(u_int16_t,unsigned short)
AC_CHECK_TYPE(u_int32_t,unsigned int)

NS_FNS_TAIL
define(AcOutputFiles,Makefile tcl/lib/ns-autoconf.tcl indep-utils/webtrace-conv/ucb/Makefile indep-utils/webtrace-conv/dec/Makefile indep-utils/webtrace-conv/nlanr/Makefile indep-utils/webtrace-conv/epa/Makefile indep-utils/cmu-scen-gen/setdest/Makefile)
builtin(include, ./conf/configure.in.tail)
